--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "@twilio/plugin-debugger",
-  "description": "explore debug events generated during your Twilio use",
-  "version": "1.1.9",
-  "author": "Twilio @twilio",
-  "bugs": "https://github.com/twilio/twilio-cli/issues",
+  "name": "@twilio/plugin-task-simulator",
+  "description": "Agent/Task simulator for Flex",
+  "version": "1.0.0",
+  "author": "Christopher Connolly @chaosloth",
+  "bugs": "https://github.com/chaosloth/plugin-task-simulator/issues",
   "dependencies": {
-    "@oclif/command": "^1.5.20",
-    "@oclif/config": "^1.15.1",
-    "@twilio/cli-core": "^5.0.0"
+    "@oclif/command": "^1.8.22",
+    "@oclif/config": "^1.18.8",
+    "@twilio/cli-core": "^7.5.3",
+    "axios": "^1.3.0",
+    "cli-ux": "^6.0.9",
+    "twilio-taskrouter": "^0.7.2"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.22.2",
-    "@oclif/test": "^1.2.5",
-    "@twilio/cli-test": "^2.1.0",
+    "@oclif/dev-cli": "^1.26.0",
+    "@oclif/test": "^1.2.8",
+    "@twilio/cli-test": "^2.1.1",
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8",
     "eslint-config-oclif": "^3.1.0",
     "globby": "^11.0.0",
     "mocha": "^7.1.2",
@@ -27,13 +30,13 @@
     "/oclif.manifest.json",
     "/src"
   ],
-  "homepage": "https://github.com/twilio/plugin-debugger",
+  "homepage": "https://github.com/chaosloth/plugin-task-simulator",
   "keywords": [
     "oclif-plugin"
   ],
   "license": "MIT",
   "oclif": {
-    "name": "debugger",
+    "name": "simulator",
     "commands": "./src/commands",
     "bin": "twilio",
     "repositoryPrefix": "<%- repo %>/blob/<%- version %>/<%- commandPath %>",
@@ -41,8 +44,8 @@
       "@oclif/plugin-help"
     ],
     "topics": {
-      "debugger": {
-        "description": "explore debug events generated during your Twilio use"
+      "simulator": {
+        "description": "Agent/Task simulator for Flex"
       }
     }
   },
